<resources>
    <string name="app_name">Pro Email Writer</string>
    <string name="welcome_message">Welcome to\nPro Email Writer</string>
    <string name="learn_button">Learn the Steps</string>
    <string name="write_button">Write that Pro Email</string>
    <string name="learn_steps_title">4 Steps to Master Professional Email Writing</string>
    <string name="step_1_text">Step 1:\nCreate a Standard Email Address</string>
    <string name="step_2_text">Step 2:\nWrite an Effective Subject Line</string>
    <string name="step_3_text">Step 3:\nMaintain proper Email body and content</string>
    <string name="step_4_text">Step 4:\nFollow some standard Email etiquette</string>
    <string name="salutation_text">Enter Salutation:</string>
    <string name="salutation_hint_text">Dear Sir/Madam, ...</string>
    <string name="intro_text">Enter a brief Intro of the Mail</string>
    <string name="intro_hint_text">Thank the recipient, Identify yourself clearly</string>
    <string name="purpose_text">State your purpose clearly</string>
    <string name="purpose_hint_text">writing for the position of Developer...</string>
    <string name="closing_text">Add Closing Remarks</string>
    <string name="closing_hint_text">Hoping to getting a reply from you soon...</string>
    <string name="make_my_email_button">Make My Email</string>
    <string name="chooser">Send Message Via ...</string>
</resources>
