<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_write_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.absak.proemailwriter.WriteEmailActivity">

    <TextView
        android:id="@+id/salutation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salutation_text"
        android:textColor="#0fbf15"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/salutation_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/salutation_text"
        android:hint="@string/salutation_hint_text"/>

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/salutation_edit_text"
        android:text="@string/intro_text"
        android:textColor="#0fbf15"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/intro_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_text"
        android:hint="@string/intro_hint_text"/>

    <TextView
        android:id="@+id/purpose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_edit_text"
        android:text="@string/purpose_text"
        android:textColor="#0fbf15"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/purpose_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/purpose_text"
        android:hint="@string/purpose_hint_text"/>

    <TextView
        android:id="@+id/closing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/purpose_edit_text"
        android:text="@string/closing_text"
        android:textColor="#0fbf15"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/closing_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/closing_text"
        android:hint="@string/closing_hint_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_my_email_button"
        android:layout_below="@id/closing_edit_text"
        android:textSize="20dp"
        android:id="@+id/make_my_email_button"
        android:onClick="makeMyEmail"/>

</RelativeLayout>
