<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.absak.proemailwriter.HomeActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/welcome_message"
        android:textColor="#0fbf15"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/learnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        android:onClick="goToLearn"
        android:text="@string/learn_button"
        android:textSize="24dp"/>
    <Button
        android:id="@+id/writeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/learnButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:onClick="goToWrite"
        android:text="@string/write_button"
        android:textSize="24dp"/>
</RelativeLayout>
